# OneStore

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py  script.py.mako
alembic/versions/: 20260323_1400_baseline.py  20260323_1500_module0_core_tables.py  20260323_1500_platform_core_tables.py  20260401_1945_avito_account_inbox_fields.py  20260401_2000_module2_inbox_tables.py
app/: __init__.py  main.py
app/actions/: __init__.py  base.py  demo.py  executor.py  probe.py
app/adapters/: __init__.py
app/admin/: __init__.py  routes.py  schemas.py  views.py
app/admin/static/: admin.css  admin.js
app/admin/templates/: accounts.html  base.html  dashboard.html  (+6 more)
app/api/: app.py
app/cli/: app.py
app/core/: __init__.py  diagnostics.py  logging.py  settings.py  smoke.py
app/db/: __init__.py  base.py  migrations.py  session.py
app/inbox/: __init__.py  client.py  normalize.py  repository.py  schemas.py  service.py  sync.py
app/jobs/: __init__.py  context.py  inbox_health.py  inbox_sync.py  locks.py  ping.py  registry.py  runner.py  scheduler.py  system_probe.py
app/modules/: __init__.py  access.py  operations.py
tests/: conftest.py  test_actions.py  test_admin.py  test_api.py  test_cli.py  test_db.py  test_inbox_client.py  test_inbox_integration.py  test_inbox_jobs.py  test_inbox_normalize.py  test_inbox_repository.py  test_inbox_sync.py  test_job_locks.py  test_jobs.py  test_logging.py  test_module_access.py  test_module_operations.py  test_scheduler.py  test_smoke.py
(+6 files in other folders)
